--- a/privatedoc/todo.txt
+++ b/privatedoc/todo.txt
@@ -65,10 +65,9 @@ OUTPUT FEATURES
 ************************************************************
 [ ] BC: give the number of tiles reduced to a point, and the number of points not covered at all (when IM does not finish)
 
-[ ] allow graphical cartography for inverse method
+[!!] allow graphical cartography for inverse method
 [ ] always allow output a cartography when 2D, even for IM, and always colour it if some good/bad states have been defined
-[ ] pass as an option the min and max bounds for the 2D graphical cartography, especially for EF or IM simple (where there is no v0)
-	-draw-cart-x-min / -draw-cart-y-max
+[ ] pass as an option the name of the parameters for the 2D graphical cartography (currently: first two)
 [ ] Rétablir le fait que -with-parametric-log active -with-log (ou inclure cette option par défaut, en fait...)
 
 [ ] rétablir (de HyMITATOR) le fait que contrôle+C rende un résultat partiel
