--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -1,3 +1,61 @@
+
+
+@inproceedings{ABBL98,
+	author    = {Luca Aceto and
+				Patricia Bouyer and
+				Augusto Burgue{\~n}o and
+				Kim Guldstrand Larsen},
+	title     = {The Power of Reachability Testing for Timed Automata},
+	booktitle = {FSTTCS'98},
+	year      = {1998},
+	pages     = {245-256},
+	ee        = {http://dx.doi.org/10.1007/b71635},
+	editor    = {Vikraman Arvind and
+				Ramaswamy Ramanujam},
+	publisher = {Springer},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {1530},
+	isbn      = {3-540-65384-8},
+	bibsource = {DBLP, http://dblp.uni-trier.de},
+}
+  title     = {Foundations of Software Technology and Theoretical Computer
+               Science, 18th Conference, Chennai, India, December 17-19,
+               1998, Proceedings},
+
+
+
+@inproceedings{ABL98,
+	author    = {Luca Aceto and
+				Augusto Burgue{\~n}o and
+				Kim G. Larsen},
+	title     = {Model Checking via Reachability Testing for Timed Automata},
+	booktitle = {TACAS 98},
+	year      = {1998},
+	pages     = {263-280},
+	ee        = {http://dx.doi.org/10.1007/BFb0054177},
+	bibsource = {DBLP, http://dblp.uni-trier.de},
+	editor    = {Bernhard Steffen},
+	publisher = {Springer},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {1384},
+  isbn      = {3-540-64356-7},
+}
+
+
+@article{ACEF09,
+	author =	{Andr{\'e}, {\'E}tienne and Chatain, Thomas and Encrenaz, Emmanuelle and Fribourg, Laurent},
+	DOI =	{10.1142/S0129054109006905},
+	journal =	{International Journal of Foundations of Computer Science},
+	number =	{5},
+	pages =	{819-836},
+	publisher =	{World Scientific},
+	title =	{An Inverse Method for Parametric Timed Automata},
+  	url =	{http://www.lsv.ens-cachan.fr/Publis/PAPERS/PDF/ACEF-ijfcs09.pdf},
+	volume =	{20},
+	year =	{2009},
+}
+
+
 @inproceedings{ACHH92,
 	author    = {Rajeev Alur and
 			Costas Courcoubetis and
@@ -105,6 +163,24 @@
   	year =	{2002},
 }
 
+
+@inproceedings{Andre13ICECCS,
+	author = {André, Étienne},
+	booktitle = {18th IEEE International Conference on Engineering of Complex Computer Systems ({ICECCS}'13)},
+  	doi = {10.1109/ICECCS.2013.26},
+  	editor = {Liu, Yang and Martin, Andrew},
+	location = {Singapore},
+	month = jul,
+	pages     = {125--134},
+	publisher = {IEEE Computer Society},
+	title = {Observer Patterns for Real-Time Systems},
+	url = {http://lipn.univ-paris13.fr/~andre/documents/observer-patterns-for-real-time-systems.pdf},
+	year = {2013},
+   	lipn-category = {intc},
+  	keywords = {intc,top10},
+}
+
+
 @book{AS13,
   	author = {Andr{\'e}, {\'E}tienne and Soulat, Romain},
   	isbn = {9781848214477},
@@ -156,6 +232,16 @@
   	url =	{http://www.lsv.ens-cachan.fr/Software/imitator/},
   	year =	{2013},
   	lipn-category = "real",
+}
+
+
+@article{JLR15,
+	author = {Jovanovi\'c, Aleksandra and Lime, Didier and  Roux, Olivier H.},
+	Title = {Integer Parameter Synthesis for Timed Automata},
+	journal = {IEEE Transactions on Software Engineering (TSE)},
+	publisher = {IEEE},
+	year = 2015,
+	Note = "To appear."
 }
 
 
